# rust-triplets

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: diagram-check.yml  rust-lint.yml  rust-tests.yml
crates/triplets-core/: Cargo.toml  README.md
crates/triplets-core/src/: config.rs  constants.rs  data.rs  errors.rs  ingestion.rs  lib.rs  metadata.rs  metrics.rs  types.rs
crates/triplets-core/src/chunking/: algorithm.rs  sliding_window.rs
crates/triplets-core/src/preprocessor/: mod.rs
crates/triplets-core/src/preprocessor/backends/: denoiser_preprocessor.rs
crates/triplets-core/src/sampler/: mod.rs  tests.rs
crates/triplets-core/src/sampler/backends/: default_backend.rs  mod.rs
crates/triplets-core/src/source/: mod.rs
crates/triplets-core/src/source/backends/: csv_source.rs  file_source.rs  in_memory_source.rs  mod.rs
crates/triplets-debug/: Cargo.toml  README.md
crates/triplets-debug/src/: lib.rs
crates/triplets-hf/: Cargo.toml  README.md
crates/triplets-hf-source/: Cargo.toml
crates/triplets-hf-source/src/: constants.rs  huggingface_source.rs  lib.rs  test_utils.rs
crates/triplets-hf-source/tests/: huggingface_integration.rs
crates/triplets-hf-test-tools/: Cargo.toml  README.md
crates/triplets-hf-test-tools/src/: lib.rs
crates/triplets-hf/src/: constants.rs  huggingface_source.rs  lib.rs
crates/triplets-hf/tests/: huggingface_integration.rs
docs/diagrams/: cache-flow.mmd
example_dataset/: README.md
example_dataset/source_a/2025-01-01/: article_a.txt
example_dataset/source_a/2025-01-02/: article_b.txt
example_dataset/source_b/2025-01-01/: qa_alpha.txt
example_dataset/source_b/2025-01-03/: qa_beta.txt
example_dataset/source_c/2025-01-02/: logistics_a.txt
example_dataset/source_c/2025-01-04/: logistics_b.txt
example_dataset/source_d/2025-01-01/: industry_a.txt
example_dataset/source_d/2025-01-02/: industry_b.txt
example_dataset/source_e/2025-01-02/: company_a.txt
example_dataset/source_e/2025-01-05/: company_b.txt
example_dataset/source_f/2025-01-03/: research_a.txt
example_dataset/source_f/2025-01-06/: research_b.txt
examples/: estimate_capacity.rs  hf_source_list_demo.rs  hf_text_latency_temp.rs  huggingface_row_view_demo.rs  multi_source_demo.rs  row_view_ad_hoc_demo.rs
examples/common/: example_sources.rs  hf_sources.txt
scripts/: render-diagrams.sh
src/: config.rs  constants.rs  data.rs  debug.rs  denoiser.rs  epoch.rs  errors.rs  example_apps.rs  hash.rs  heuristics.rs  ingestion.rs  kvp.rs  lib.rs  metadata.rs  metrics.rs  sampler.rs  source.rs  splits.rs  tokenizer.rs  utils.rs
src/chunking/: mod.rs  sliding_window.rs
src/preprocessor/backends/: denoiser_preprocessor.rs  mod.rs
src/sampler/: bm25.rs  mod.rs  tests.rs
src/sampler/backends/: bm25_backend.rs  default_backend.rs  mod.rs
src/source/: file_corpus.rs  huggingface.rs  mod.rs  row_view.rs
src/source/backends/: csv_source.rs  file_source.rs  huggingface_source.rs  mod.rs
src/source/indexing/: date_helpers.rs  file_corpus.rs  file_stream.rs  mod.rs
src/source/sources/: file_source.rs  huggingface.rs  huggingface_source.rs  mod.rs
src/source/utilities/: file_corpus.rs  grouping.rs
src/transport/: fs.rs  mod.rs
tests/: anchor_positive_swap.rs  huggingface_integration.rs  ingestion_buffering.rs  invariants.rs  prefetcher.rs  shuffled_batch_size.rs  shuffled_persistence.rs  split_persistence_file_stream.rs  triplet_diversity.rs
