[package]
name = "triplets"
version = "0.1.4-alpha"
edition = "2024"
description = "Composable data sampling primitives for deterministic multi-source ML/AI training-data orchestration."
license = "MIT OR Apache-2.0"
authors = ["Jeremy <jeremy@example.com>"]
repository = "https://github.com/jzombie/rust-triplets"
categories = ["algorithms", "science", "text-processing"]
keywords = [
    "machine-learning",
    "contrastive-learning",
    "triplet-loss",
    "dataset-sampling",
    "training-data",
]

[features]
default = []
huggingface = ["dep:serde_json", "dep:hf-hub", "dep:parquet"]

[dependencies]
bitcode = "0.6.9"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
indexmap = "2.13.0"
rand = { version = "0.9.2", features = ["std", "small_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
hf-hub = { version = "0.5.0", optional = true, default-features = false, features = ["ureq", "rustls-tls"] }
parquet = { version = "54.2.1", optional = true, features = ["json"] }
simd-r-drive = "0.15.5-alpha"
tempfile = "3.25.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.5.0"

[[example]]
name = "huggingface_row_view_demo"
required-features = ["huggingface"]
