
[package]
name = "triplets"
description = "A composable, deterministic text data pipeline for ML. Ingest, denoise, chunk, split, and sample multi-source corpora into reproducible training triplets."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories = ["algorithms", "artificial-intelligence", "science", "text-processing"]
keywords = [
    "train-test-split",
    "triplet-mining",
    "dataset-sampling",
    "preprocessing",
    "bm25",
]
[workspace]
members = [".", "crates/triplets-core", "crates/triplets-hf"]
resolver = "2"

[workspace.package]
version = "0.20.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
repository = "https://github.com/jzombie/rust-triplets"

[features]
default = []
huggingface = ["dep:serde_json", "dep:hf-hub", "dep:parquet", "dep:reqwest", "dep:tokio"]
bm25-mining = ["dep:bm25"]
extended-metrics = []

[dependencies]
bitcode = "0.6.9"
bm25 = { version = "2.3.2", optional = true, features = ["parallelism"] }
cache-manager = "0.4.0"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
hf-hub = { version = "0.5.0", optional = true, default-features = false, features = ["tokio", "rustls-tls"] }
indexmap = "2.14.0"
line-ending = "1.5.1"
parquet = { version = "58.1.0", optional = true, features = ["json"] }
rand = { version = "0.9.3", features = ["std", "small_rng"] }
rayon = "1.12.0"
reqwest = { version = "0.12.28", optional = true, default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
simd-r-drive = "0.16.1-alpha"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", optional = true, features = ["rt", "fs", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"

[dev-dependencies]
indoc = "2.0.7"
serial_test = "3.4.0"
triplets-core = { path = "crates/triplets-core" }
triplets-hf = { path = "crates/triplets-hf" }
