[package]
name = "triplets-core"
description = "Core types, traits, and algorithms for the triplets data pipeline framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories = ["algorithms", "artificial-intelligence", "science", "text-processing"]
keywords = [
    "train-test-split",
    "triplet-mining",
    "dataset-sampling",
    "preprocessing",
    "bm25",
]

[features]
default = []
bm25-mining = ["dep:bm25"]
extended-metrics = []

[dependencies]
bitcode = { workspace = true }
bm25 = { workspace = true, optional = true }
cache-manager = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
indexmap = { workspace = true }
line-ending = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
simd-r-drive = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
