[package]
name = "triplets-debug"
description = "Reusable debug/demo runners for the triplets data pipeline framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories = ["algorithms", "artificial-intelligence", "science", "text-processing"]
keywords = [
    "train-test-split",
    "triplet-mining",
    "dataset-sampling",
    "preprocessing",
]

[features]
default = []
bm25-mining = ["triplets-core/bm25-mining"]
extended-metrics = ["triplets-core/extended-metrics"]

[dependencies]
cache-manager = { workspace = true }
clap = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
triplets-core = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }
