[package]
name = "triplets-hf-test-tools"
description = "Shared mock HTTP servers and test utilities for triplets HuggingFace integration tests."
version.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_json = "1.0.149"
