[package]
name = "triplets-hf"
description = "HuggingFace integration for the triplets data pipeline framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories = ["algorithms", "artificial-intelligence", "science", "text-processing"]
keywords = [
    "train-test-split",
    "triplet-mining",
    "huggingface",
    "dataset-sampling",
    "preprocessing",
]

[dependencies]
triplets-core = { path = "../triplets-core" }
chrono = { workspace = true }
hf-hub = { workspace = true }
parquet = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-r-drive = { workspace = true }
cache-manager = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
serial_test = { workspace = true }
tracing-subscriber = { workspace = true }
